# FAST-LIVO2

./: .gitignore  CMakeLists.txt  CUSTOM_FEATURE_GUIDE.md  FEATURE_QUICK_REFERENCE.md  README.md  package.xml
Log/: guide.md  imu.txt  mat_out.txt  mat_pre.txt  plot.py
Log/Colmap/sparse/0/: cameras.txt  images.txt
Log/result/ntu_viral/: README.md  eee_01_gt.txt  eee_01_prism.txt  eee_02_gt.txt  eee_02_prism.txt  eee_03_gt.txt  eee_03_prism.txt  evaluate_viral.py  nya_01_gt.txt  nya_01_prism.txt  nya_02_gt.txt  nya_02_prism.txt  nya_03_gt.txt  nya_03_prism.txt  sbs_01_gt.txt  sbs_01_prism.txt  sbs_02_gt.txt  sbs_02_prism.txt  sbs_03_gt.txt  sbs_03_prism.txt
calibration/: cam_00.json  cam_01.json  cam_02.json  cam_03.json  cams_to_lidar.txt
config/: HILTI22.yaml  MARS_LVIG.yaml  NTU_VIRAL.yaml  SNU.yaml  avia.yaml  avia_metacamedu.yaml  avia_packbot.yaml  avia_zed.yaml  camera_MARS_LVIG.yaml  camera_NTU_VIRAL.yaml  camera_SNU.yaml  camera_d435.yaml  camera_fisheye_HILTI22.yaml  camera_hk_mems.yaml  camera_metacamedu.yaml  camera_pinhole.yaml  camera_pinhole_mid360.yaml  camera_pinhole_packbot.yaml  camera_urban_loco_ca.yaml  camera_urban_loco_hk.yaml  camera_zed.yaml  feature_detection.yaml  fisheye_instrinct.yaml  hk_mems.yaml  mid360.yaml  urban_loco_ca.yaml  urban_loco_hk.yaml
config/dongfeng/: df_camera.yaml  hs_LiDAR.yaml  rs_LiDAR.yaml
docs/: BUILD_RESIDUAL_OPTIMIZATION.md  DEBUG_TRANSFORMLIDAR_OPTIMIZATION.md  LIO_BUFFER_OPTIMIZATION.md  STATE_RESERVE_OPTIMIZATION.md  VIO_PREPROCESS_OPTIMIZATION.md
images/: make_multiview_videos.py  rectify_images.py
include/: IMU_Processing.h  LIVMapper.h  common_lib.h  direct_method_adapter.h  feature.h  feature_detector.h  feature_factory.h  frame.h  orb_detector.h  preprocess.h  vio.h  visual_point.h  voxel_map.h
include/fastlivo2/: IMU_Processing.h  LIVMapper.h  common_lib.h  feature.h  preprocess.h  vio.h  visual_point.h  voxel_map.h
include/livox_ros_driver/: CustomMsg.h  CustomPoint.h
include/utils/: color.h  so3_math.h  types.h  utils.h
include/vikit/: camera_loader.h  output_helper.h  params_helper.h
launch/: mapping.launch.py  mapping_avia.launch  mapping_avia_marslvig.launch  mapping_avia_marslvig.launch.py  mapping_avia_zed.launch  mapping_aviz.launch.py  mapping_aviz_metacamedu.launch.py  mapping_hesaixt32_hilti22.launch  mapping_hk_mems.launch  mapping_hs_dfCamera.launch  mapping_mid360.launch  mapping_ouster_ntu.launch  mapping_ouster_ntu.launch.py  mapping_rs_dfCamera.launch  mapping_snu.launch  mapping_urban_loco_ca.launch  mapping_urban_loco_hk.launch
rviz/: fast_livo2.rviz
rviz_cfg/: M300.rviz  SNU.rviz  fast_livo2.rviz  hilti.rviz  hk_mems.rviz  ntu_viral.rviz  urbanloco.rviz  urbanloco_ca.rviz
scripts/: calculate_transform.py  camera_model.py  colmap_output.sh  mesh.py
src/: IMU_Processing.cpp  LIVMapper.cpp  feature_factory.cpp  frame.cpp  main.cpp  orb_detector.cpp  preprocess.cpp  utils.cpp  vio.cpp  visual_point.cpp  voxel_map.cpp
src/preprocess/: hesai_to_velodyne.cpp  pcl_struct.hpp  rs_to_velodyne.cpp
